sandbox/output
TicketDispenserTest.java:62: error: constructor TurnNumberSequence in class TurnNumberSequence cannot be applied to given types;
        TurnNumberSequence turnNumberSequence = new TurnNumberSequence(1001);
                                                ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
1 error
